[project]
name = "web3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-anthropic>=1.0.4",
    "langchain-core>=1.0.5",
    "langchain-mcp-m2m",
    "langgraph>=1.0.0",
    "langgraph-prebuilt>=1.0.4",
    "pyinstaller>=6.0.0",
]
